Implement more fixes for label propagation and action sequence finder